@@ -658,6 +658,64 @@
   (should-equal (keymap-global-lookup "C-x C-f") #'find-file)
   (should-equal (keymap-global-lookup "C-c") #'mode-specific-command-prefix))
 
+(ert-deftest keymap-unset ()
+  (let ((map (make-sparse-keymap)))
+    (define-key map "\M-x" #'execute-extended-command)
+    (define-key map "\C-x\C-f" #'find-file)
+    (define-key map "\C-y" #'yank)
+    (keymap-unset map "M-x")
+    (keymap-unset map "C-x C-f")
+    (keymap-unset map "C-y")
+    (should-equal map '(keymap (25) (24 keymap (6)) (27 keymap (120)))))
+  (let ((map (make-sparse-keymap)))
+    (define-key map "\M-x" #'execute-extended-command)
+    (define-key map "\C-x\C-f" #'find-file)
+    (define-key map "\C-y" #'yank)
+    (keymap-unset map "M-x" t)
+    (keymap-unset map "C-x C-f" t)
+    (keymap-unset map "C-y" t)
+    (should-equal map '(keymap (24 keymap) (27 keymap)))))
+
+(ert-deftest keymap-local-unset ()
+  (let ((map (make-sparse-keymap))
+        (orig (current-local-map)))
+    (unwind-protect
+        (progn
+          (use-local-map map)
+          (define-key map "\M-x" #'execute-extended-command)
+          (define-key map "\C-x\C-f" #'find-file)
+          (define-key map "\C-y" #'yank)
+          (keymap-local-unset "M-x")
+          (keymap-local-unset "C-x C-f" t)
+          (keymap-local-unset "C-y" t)
+          (should-equal (current-local-map) '(keymap (24 keymap) (27 keymap (120)))))
+      (use-local-map orig))))
+
+(ert-deftest keymap-global-unset ()
+  (let ((map (make-sparse-keymap))
+        (orig (current-global-map)))
+    (unwind-protect
+        (progn
+          (use-global-map map)
+          (define-key map "\M-x" #'execute-extended-command)
+          (define-key map "\C-x\C-f" #'find-file)
+          (define-key map "\C-y" #'yank)
+          (keymap-global-unset "M-x")
+          (keymap-global-unset "C-x C-f" t)
+          (keymap-global-unset "C-y" t)
+          (should-equal (current-global-map) '(keymap (24 keymap) (27 keymap (120)))))
+      (use-global-map orig))))
+
+(ert-deftest define-key ()
+  (let ((map (make-sparse-keymap)))
+    (define-key map "\M-x" #'execute-extended-command)
+    (define-key map "\C-x\C-f" #'find-file)
+    (define-key map "\C-y" #'yank)
+    (compat-call define-key map "\M-x" nil t)
+    (compat-call define-key map "\C-x\C-f" nil t)
+    (compat-call define-key map "\C-y" nil t)
+    (should-equal map '(keymap (24 keymap) (27 keymap)))))
+
 (defun compat-tests--function-put ())
 (ert-deftest function-put ()
   (function-put #'compat-tests--function-put 'compat-test 42)
