@@ -6,6 +6,7 @@
 - Add links from compatibility definitions to tests.
 - BREAKING: Drop JSON parsing support (libjansson API).
 - BREAKING: Drop ~null-device~.
+- compat-29: Fix and test ~define-key~ with REMOVE argument.
 - compat-26: Add ~buffer-hash~.
 - compat-27: Add ~fixnump~ and ~bignump~.
 - compat-27: Add ~with-minibuffer-selected-window~.
